Finished setting up webpack and added content to index

--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     </head>
     <body>
         <header>
-            
+            <nav>
+                <ul>
+                    <li>Listen</li>
+                    <li>Talain</li>
+                    <li>Look</li>
+                </ul>
+            </nav>
         </header>
-        <footer>
-            <p>Copyright 2009 Your name</p>
+        <main>
+            <div class="c-main"></div>
+        </main>
+        <footer class="c-footer">
+            <div class="c-footer__item">
+                <i class="social"></i>
+                <i class="social"></i>
+            </div>
+            <p class="c-footer__item">Song</p>
+            <a class="c-footer__item">Contact</a>
+            <p class="c-footer__item">Film</p>
+            <div class="c-footer__item">
+                <i class="social"></i>
+                <i class="social"></i>
+            </div>
         </footer>
         <script type="text/javascript" src="dist/bundle.js"></script>
     </body>
