Compiling handlebars for different page views and setup css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Talain</title>
+        <link href="https://fonts.googleapis.com/css?family=Heebo:400,500|Hind:500,600" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -14,9 +16,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <div class="c-main"></div>
-        </main>
+        <main></main>
         <footer class="c-footer">
             <div class="c-footer__item">
                 <i class="social"></i>
