Added general stying to homepage

--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Talain</title>
-        <link href="https://fonts.googleapis.com/css?family=Heebo:400,500|Hind:500,600" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Heebo:100,400|Hind:500,600" rel="stylesheet">
+        <link href="css/reset.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li>Listen</li>
-                    <li>Talain</li>
-                    <li>Look</li>
-                </ul>
-            </nav>
+        <header class="c-header t-center-content">
+            <h1 class="t-hind-font t1">Talain</h1>
         </header>
-        <main></main>
-        <footer class="c-footer">
+        <main class="c-content"></main>
+        <footer class="c-footer t-center-content">
             <div class="c-footer__item">
                 <i class="social"></i>
                 <i class="social"></i>
             </div>
-            <p class="c-footer__item">Song</p>
-            <a class="c-footer__item">Contact</a>
-            <p class="c-footer__item">Film</p>
+            <p class="c-footer__item t-hind-font t-stretched-large">Film</p>
+            <a class="c-footer__item t2">About</a>
+            <a class="c-footer__item t2">Work</a>
+            <a class="c-footer__item t2">Contact</a>
+            <a class="c-footer__item t-hind-font t-stretched-small">Director</a>
             <div class="c-footer__item">
                 <i class="social"></i>
                 <i class="social"></i>
