Added video intro and styles

--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
             <h1 class="t-hind-font t1">Talain</h1>
         </header>
         <main class="c-content"></main>
-        <footer class="c-footer t-center-content">
+        <footer class="c-footer t-center-footer">
             <div class="c-footer__item">
                 <i class="social"></i>
                 <i class="social"></i>
             </div>
-            <p class="c-footer__item t-hind-font t-stretched-large">Film</p>
-            <a class="c-footer__item t2">About</a>
-            <a class="c-footer__item t2">Work</a>
-            <a class="c-footer__item t2">Contact</a>
-            <a class="c-footer__item t-hind-font t-stretched-small">Director</a>
+            <a class="c-footer__item t-fade t2">About</a>
+            <a class="c-footer__item t-fade t2">Contact</a>
+            <a class="c-footer__item t-fade t2">Work</a>
             <div class="c-footer__item">
                 <i class="social"></i>
                 <i class="social"></i>
