Toggling template views

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <i class="social"></i>
                 <i class="social"></i>
             </div>
-            <a class="c-footer__item t-fade t2">About</a>
-            <a class="c-footer__item t-fade t2">Contact</a>
-            <a class="c-footer__item t-fade t2">Work</a>
+            <a class="c-footer__item t-fade t2 js-link" data-link="about">About</a>
+            <a class="c-footer__item t-fade t2 js-link" data-link="contact">Contact</a>
+            <a class="c-footer__item t-fade t2 js-link" data-link="work">Work</a>
             <div class="c-footer__item">
                 <i class="social"></i>
                 <i class="social"></i>
