Created about and contact pages.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Talain</title>
         <link href="https://fonts.googleapis.com/css?family=Heebo:100,400|Hind:500,600" rel="stylesheet">
         <link href="css/reset.css" rel="stylesheet">
