Made footer links blurry and fixed video height

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header class="c-header t-center-content">
-            <h1 class="t-hind-font t1 u-clickable js-header-link" data-link="home">Talain</h1>
+            <h1 class="t-hind-font t1 t-blurry-text u-clickable js-header-link" data-link="home">Talain</h1>
         </header>
         <main class="c-content"></main>
         <footer class="c-footer t-center-footer">
@@ -18,9 +18,9 @@
                 <i class="social"></i>
                 <i class="social"></i>
             </div>
-            <a class="c-footer__item t-fade t2 u-clickable js-link" data-link="about">About</a>
-            <a class="c-footer__item t-fade t2 u-clickable js-link" data-link="contact">Contact</a>
-            <a class="c-footer__item t-fade t2 u-clickable js-link" data-link="work">Work</a>
+            <a class="c-footer__item t-fade t2 t-blurry-text u-clickable js-link" data-link="about">About</a>
+            <a class="c-footer__item t-fade t2 t-blurry-text u-clickable js-link" data-link="contact">Contact</a>
+            <a class="c-footer__item t-fade t2 t-blurry-text u-clickable js-link" data-link="work">Work</a>
             <div class="c-footer__item">
                 <i class="social"></i>
                 <i class="social"></i>
